--- a/characters.html
+++ b/characters.html
@@ -11,6 +11,29 @@
 rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 />
+
+
+ <!-----------HEADER----------------------------->
+<header>
+    <div class="container">
+        <div class="navbar">
+        <div class="logo">
+            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+        </div>
+    <nav>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./movies.html">Movies</a></li>
+        <li><a href="./shows.html">Shows</a></li>
+        <li><a href="./characters.html">Characters</a></li>
+        <li><a href="./closet.html">Closet</a></li>
+        
+    </nav>
+    </div>
+    </div>
+</header>
+<!-----------HEADER CLOSE----------------------------->
+
+
 <!-- FRENS SECTION -->
 <section id="frens">
     <div class="container">
