--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <title> BarbieLAT</title>
     </head>
 <body>
+
  <!-----------HEADER----------------------------->
 <header>
     <div class="container">
@@ -19,16 +20,13 @@
             <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
         </div>
     <nav>
-        <li><a href="#">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./movies.html">Movies</a></li>
         <li><a href="./shows.html">Shows</a></li>
-        <li><a href="./characters.html">Friends</a></li>
+        <li><a href="./characters.html">Characters</a></li>
         <li><a href="./closet.html">Closet</a></li>
         
     </nav>
-    <div class="btn">
-        <i class="fas fa-bars movie-btn"></i>
-    </div>
     </div>
     </div>
 </header>
@@ -51,73 +49,70 @@
 <!-----------barbie (SPECIAL OFFER) ----------------------------->
 <aside id="sp_offer">
     <div class="container">
-        <div class="sp_content">
 
-            <!-- LEFT SIDE CONTENT -->
-            <div class="left_side_content">
-
-                <div class="headings">
-                    <h3>Welcome to Barbie's World!</h3>
-                    <h2>Special Words</h2>
-                </div>
-
-                <!-- BARBIE CARD -->
-                <div class="asset_content">
-                    <div class="asset">
-                        <img src="./public/asset/barbey.jpg">
-                        <div class="content_for_asset">
-                            <h4>Barbie</h4>
-                            <p>
-                                Discover Barbie’s evolution — from her 1959 debut to her modern-day adventures in film,
-                                fashion, friendship, and empowerment.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- KEN CARD -->
-                <div class="asset_content">
-                    <div class="asset">
-                        <img src="./public/asset/ken.jpg">
-                        <div class="content_for_asset">
-                            <h4>Ken</h4>
-                            <p>
-                                Dive into her movies, stylish outfits, unforgettable characters, and stories that inspired
-                                generations to dream big.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- RAQUELLE CARD -->
-                <div class="asset_content">
-                    <div class="asset">
-                        <img src="./public/asset/raquelle.jpg">
-                        <div class="content_for_asset">
-                            <h4>Raquelle</h4>
-                            <p>
-                                BarbieLaT brings confidence, imagination, and creativity to every visitor exploring this 
-                                magical pink universe.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <!-- RIGHT SIDE IMAGE + BUBBLE -->
-            <div class="right_side_content">
-                <div class="asset_right_side">
-                    <img src="./public/asset/righjt.jpg" alt="Barbie Collection">
-                    <div class="over_asset">
-                        <a href="./movies.html"><h2>Movies</h2></a>
+        <div class="headings"> <h3>Welcome to Barbie's World!</h3>
+            <h2>Special Words</h2> </div>
+        <!-- TOP: CHARACTER CARDS -->
+        <div class="character_row">
+            <div class="asset_content">
+                <div class="asset center_asset">
+                    <img src="./public/asset/barbey.jpg" alt="Barbie">
+                    <div class="content_for_asset">
+                        <h4>Barbie</h4>
+                        <p>Step into my world of dazzling movies and shows <br> where friendship and adventure never go out of style!</p>
                     </div>
                 </div>
             </div>
+
+            <div class="asset_content">
+                <div class="asset center_asset">
+                    <img src="./public/asset/ken.jpg" alt="Ken">
+                    <div class="content_for_asset">
+                        <h4>Ken</h4>
+                        <p>With charm and loyalty, I’m always ready to stand by <br>Barbie’s side and make every story shine</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="asset_content">
+                <div class="asset center_asset">
+                    <img src="./public/asset/raquelle.jpg" alt="Raquelle">
+                    <div class="content_for_asset">
+                        <h4>Raquelle</h4>
+                        <p>Bold fashion, fierce rivalry, and unforgettable drama<br>I’m the spark that keeps Barbie’s world exciting!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- BOTTOM: 2x2 NAV GRID -->
+        <div class="nav_grid">
+
+            <a href="./movies.html" class="nav_card">
+                <img src="./public/asset/righjt.jpg" alt="Movies">
+                <div class="nav_overlay"><h2>Movies</h2></div>
+            </a>
+
+            <a href="./shows.html" class="nav_card">
+                <img src="./public/asset/righjt.jpg" alt="Shows">
+                <div class="nav_overlay"><h2>Shows</h2></div>
+            </a>
+
+            <a href="./characters.html" class="nav_card">
+                <img src="./public/asset/righjt.jpg" alt="Characters">
+                <div class="nav_overlay"><h2>Characters</h2></div>
+            </a>
+
+            <a href="./closet.html" class="nav_card">
+                <img src="./public/asset/righjt.jpg" alt="Closet">
+                <div class="nav_overlay"><h2>Closet</h2></div>
+            </a>
 
         </div>
+
     </div>
 </aside>
+
 <!-----------barbie (SPECIAL OFFER) END ----------------------------->
 
 
