--- a/closet.html
+++ b/closet.html
@@ -12,6 +12,27 @@ rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 />
 
+
+ <!-----------HEADER----------------------------->
+<header>
+    <div class="container">
+        <div class="navbar">
+        <div class="logo">
+            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+        </div>
+    <nav>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./movies.html">Movies</a></li>
+        <li><a href="./shows.html">Shows</a></li>
+        <li><a href="./characters.html">Characters</a></li>
+        <li><a href="./closet.html">Closet</a></li>
+        
+    </nav>
+    </div>
+    </div>
+</header>
+<!-----------HEADER CLOSE----------------------------->
+
 <!-- CLOTHES SLIDER -->
 <section id="clothes">
     <div class="container">
