--- a/movies.html
+++ b/movies.html
@@ -11,6 +11,27 @@
 rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 />
+
+ <!-----------HEADER----------------------------->
+<header>
+    <div class="container">
+        <div class="navbar">
+        <div class="logo">
+            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+        </div>
+    <nav>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./movies.html">Movies</a></li>
+        <li><a href="./shows.html">Shows</a></li>
+        <li><a href="./characters.html">Characters</a></li>
+        <li><a href="./closet.html">Closet</a></li>
+        
+    </nav>
+    </div>
+    </div>
+</header>
+<!-----------HEADER CLOSE----------------------------->
+
 <!-----------MOVIES---------------------------->
 <section id="movie_lover">
     <div class="container">
@@ -29,7 +50,7 @@ rel="stylesheet"
 
     <div class="asset_cards">
         <img src="./public/asset/movie.jpg" alt="">
-        <p>Barbie: Star Light Adventure (2016)</p>
+        <p> Barbie: Star Light Adventure (2016)</p>
     </div>
 
     <div class="asset_cards">
