ako'y nagiisang muli

--- a/characters.html
+++ b/characters.html
@@ -73,12 +73,12 @@ rel="stylesheet"
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/schlondpoofah.jpg">
                 <p>Raquelle — Ambitious & trendy</p>
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/teresa.jpg">
                 <p>Teresa — Clever & logical</p>
             </div>
 
