--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="icon" href="./public/asset/barbIE.png" >
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/responsive.css">
 
@@ -17,7 +18,7 @@
     <div class="container">
         <div class="navbar">
         <div class="logo">
-            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+            <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
     <nav>
         <li><a href="./index.html">Home</a></li>
@@ -25,6 +26,7 @@
         <li><a href="./shows.html">Shows</a></li>
         <li><a href="./characters.html">Characters</a></li>
         <li><a href="./closet.html">Closet</a></li>
+        <li><a href="./reference.html">References</a></li>
         
     </nav>
     </div>
@@ -89,23 +91,29 @@
         <div class="nav_grid">
 
             <a href="./movies.html" class="nav_card">
-                <img src="./public/asset/righjt.jpg" alt="Movies">
+                <img src="./public/asset/moviehome.jpg" alt="Movies">
                 <div class="nav_overlay"><h2>Movies</h2></div>
             </a>
 
             <a href="./shows.html" class="nav_card">
-                <img src="./public/asset/righjt.jpg" alt="Shows">
+                <img src="./public/asset/showhome.jpg" alt="Shows">
                 <div class="nav_overlay"><h2>Shows</h2></div>
             </a>
 
             <a href="./characters.html" class="nav_card">
-                <img src="./public/asset/righjt.jpg" alt="Characters">
+                <img src="./public/asset/chhome.jpg" alt="Characters">
                 <div class="nav_overlay"><h2>Characters</h2></div>
             </a>
 
             <a href="./closet.html" class="nav_card">
-                <img src="./public/asset/righjt.jpg" alt="Closet">
+                <img src="./public/asset/clotheshome.jpg" alt="Closet">
                 <div class="nav_overlay"><h2>Closet</h2></div>
+            </a>
+
+            
+            <a href="./reference.html" class="nav_card">
+                <img src="./public/asset/refhome.jpg" alt="References">
+                <div class="nav_overlay"><h2>References</h2></div>
             </a>
 
         </div>
