--- a/movies.html
+++ b/movies.html
@@ -5,19 +5,20 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="/WDProjLiJacobeReyes/css/style.css">
-        <link rel="stylesheet" href="/WDProjLiJacobeReyes/css/responsive.css">
-        <link
-rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
-/>
+        <link rel="icon" href="./public/asset/barbIE.png" >
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/responsive.css">
+
+        <title> BarbieLAT</title>
+    </head>
+<body>
 
  <!-----------HEADER----------------------------->
 <header>
     <div class="container">
         <div class="navbar">
         <div class="logo">
-            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+            <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
     <nav>
         <li><a href="./index.html">Home</a></li>
@@ -25,6 +26,7 @@ rel="stylesheet"
         <li><a href="./shows.html">Shows</a></li>
         <li><a href="./characters.html">Characters</a></li>
         <li><a href="./closet.html">Closet</a></li>
+        <li><a href="./reference.html">References</a></li>
         
     </nav>
     </div>
@@ -78,13 +80,13 @@ rel="stylesheet"
     </div>
 
     <div class="asset_cards">
-        <img src="./public/asset/movie7.png" alt="">
-        <p>Barbie as The Princess and the Pauper (2004)</p>
+        <img src="./public/asset/movie7.jpg" alt="">
+        <p>The Princess and the Pauper (2004)</p>
     </div>
 
     <div class="asset_cards">
-        <img src="./public/asset/movie8.png" alt="">
-        <p> Barbie in the 12 Dancing Princesses (2006)</p>
+        <img src="./public/asset/movie8.jpg" alt="">
+        <p> The 12 Dancing Princesses (2006)</p>
     </div>
 
     <div class="asset_cards">
