--- a/characters.html
+++ b/characters.html
@@ -5,20 +5,20 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="icon" href="./public/asset/barbIE.png" >
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/responsive.css">
-        <link
-rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
-/>
 
+        <title> BarbieLAT</title>
+    </head>
+<body>
 
  <!-----------HEADER----------------------------->
 <header>
     <div class="container">
         <div class="navbar">
         <div class="logo">
-            <a href="#"><img src="./public/asset/barbielat.png" alt=""></a>
+            <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
     <nav>
         <li><a href="./index.html">Home</a></li>
@@ -26,6 +26,7 @@ rel="stylesheet"
         <li><a href="./shows.html">Shows</a></li>
         <li><a href="./characters.html">Characters</a></li>
         <li><a href="./closet.html">Closet</a></li>
+        <li><a href="./reference.html">References</a></li>
         
     </nav>
     </div>
