--- a/characters.html
+++ b/characters.html
@@ -84,12 +84,12 @@
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/Nikki.jpg">
                 <p>Nikki — Creative & artsy</p>
             </div>
 
             <div class="asset_cards">
-                <img src="./public/asset/ken.jpg">
+                <img src="./public/asset/renee.jpg">
                 <p>Renee — Clumsy & funny</p>
             </div>
 
