--- a/reference.html
+++ b/reference.html
@@ -43,7 +43,7 @@
  <div class="reference_cards">
 
             <div class="ref_card">
-                <img src="./public/asset/raqq.jpg" alt="Zoe">
+                <img src="./public/asset/zoe.jpg" alt="Zoe">
                 <h3>Zoe</h3>
                 <p>maam aline ang hirap neto</p>
             </div>
@@ -60,7 +60,7 @@
             <div class="ref_card">
                 <img src="./public/asset/liz.jpg" alt="Liz">
                 <h3>Liz</h3>
-                <p>maam bakit ganto</p>
+                <p>Ma'am after this, ayaw ko na magcode ever again </p>
             </div>
 
         </div>
