IKAW PA RIN ANG PIPILIIN KOOO

--- a/reference.html
+++ b/reference.html
@@ -94,6 +94,9 @@
                 <li><a href="https://www.w3schools.com/CSSref/sel_hover.php">EVEN MORE Hover Effects</a></li>
             </ul>
         </div>
+    <footer>
+            <p>  Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved</span><br>Images and Information courtesy of Mattel, Barbie Official, and fan archives</p>
+          </footer>
     </div>
 </section>
 
