ako'y nag iisang muli, hawak ang alaala moooo

--- a/reference.html
+++ b/reference.html
@@ -45,7 +45,7 @@
             <div class="ref_card">
                 <img src="./public/asset/zoe.jpg" alt="Zoe">
                 <h3>Zoe</h3>
-                <p>maam aline ang hirap neto</p>
+                <p>Ma'am, I will never EVER choose cs ♡ </p>
             </div>
 
             <div class="ref_card">
@@ -60,7 +60,7 @@
             <div class="ref_card">
                 <img src="./public/asset/liz.jpg" alt="Liz">
                 <h3>Liz</h3>
-                <p>Ma'am after this, ayaw ko na magcode ever again </p>
+                <p>Ma'am after this, ayaw ko na magcode ever again ♡ </p>
             </div>
 
         </div>
