ikaw parin! ang nilalaman ng mga panalangin koooo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             
             <a href="./reference.html" class="nav_card">
-                <img src="./public/asset/refhome.jpg" alt="References">
+                <img src="./public/asset/bubele bubele.jpg" alt="References">
                 <div class="nav_overlay"><h2>References</h2></div>
             </a>
 
