--- a/reference.html
+++ b/reference.html
@@ -45,7 +45,7 @@
             <div class="ref_card">
                 <img src="./public/asset/zoe.jpg" alt="Zoe">
                 <h3>Zoe</h3>
-                <p>Ma'am, I will never EVER choose cs ♡ </p>
+                <p>Ma'am, I will never EVER EVER choose cs ♡ </p>
             </div>
 
             <div class="ref_card">
