--- a/index.html
+++ b/index.html
@@ -125,5 +125,9 @@
 
 
     <script src="./js/script.js"></script>
-</body>    
+</body>
+
+<div element="footer">
+    <p> Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved </p>
+</div>
 </html>
