--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <script src="./js/script.js"></script>
 </body>
 
-<div element="paa">
+<div class="paa">
     <p> Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved </p>
 </div>
 </html>
