--- a/characters.html
+++ b/characters.html
@@ -96,4 +96,12 @@
         </div>
     </div>
 </section>
+<div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>
+</body>
+</html>
 <!------------------ FRENS----------------------->
