--- a/closet.html
+++ b/closet.html
@@ -108,5 +108,11 @@
 
 
     <script src="./js/script.js"></script>
-</body>    
+</body>
+<div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>    
 </html>
