--- a/movies.html
+++ b/movies.html
@@ -130,5 +130,11 @@
 </section>
 <script src="/WDProjLiJacobeReyes/js/script.js"></script>
 </body>    
+<div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>
 </html>
 <!----------MOVIES----------------------------->
