--- a/shows.html
+++ b/shows.html
@@ -101,8 +101,12 @@
     </div>
     
 </div>
-        </div>
-    </div>
+    <div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>
 
 </section>
 
