--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
 </body>
 
 <div class="paa">
-    <p> Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved </p>
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
 </div>
 </html>
