--- a/shows.html
+++ b/shows.html
@@ -101,13 +101,14 @@
     </div>
     
 </div>
-    <div class="paa">
+</section>
+</body>
+<div class="paa">
     <p> 
         Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
         
         </p>
 </div>
-
-</section>
+</html>
 
 <!----------SHWOOSOSOSOSO----------------------------->
