--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
                 <div class="nav_overlay"><h2>References</h2></div>
             </a>
             
+            <div class="reference_box">
+                <h3>More about Barbie and BarbieLAT —      </h3>
+
+                <div class="text-box">
+                    <p>BarbieLAT is a website th</p>
+                    <p>he7yyeye</p>
+                </div>
+            </div>
 
         </div>
 
