--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
                 <h3>More about Barbie and BarbieLAT —      </h3>
 
                 <div class="text-box">
-                    <p>BarbieLAT is a website th</p>
-                    <p>he7yyeye</p>
+                    <p>Barbie was first introduced in 1959 and became one of the most recognizable dolls in the world. Over time, she has taken on many jobs such as astronaut, teacher, scientist, and more. These roles show that girls can imagine themselves in many different futures.</p>
+                    <br> </br>
+                    <p>Barbie also grew beyond being just a toy and became part of movies, music, and pop culture. Newer stories focus on confidence, self discovery, and breaking old expectations. This helped Barbie connect with a younger generation.</p>
+                    <br> </br>
+                    <p>A fun fact is that Barbie’s pink color is now strongly linked to creativity and confidence. Many people still collect old Barbie dolls, while new ones mix classic designs with modern styles. Barbie continues to be both a childhood memory and a symbol of change.</p>
                 </div>
             </div>
 
