--- a/movies.html
+++ b/movies.html
@@ -136,5 +136,18 @@
         
         </p>
 </div>
+
+<section>
+
+<div class="section-container">
+    <div class="wide-text-container">
+        <p>Barbie movies often focus on friendship, courage, and believing in yourself. Many stories take place in colorful worlds where Barbie goes on adventures and overcomes challenges. These films are made to be fun while sharing positive lessons. They encourage viewers to be kind and helpful to others. </p>
+        <br> 
+        <p>Some Barbie movies are based on fairytales, while others are set in modern times. They show different characters working together and learning from their mistakes. Music and bright visuals make the stories more engaging for viewers. The characters often face problems that teach important life lessons.</p>
+        <br>
+        <p> Over the years, Barbie movies have become a big part of childhood for many people. New films keep the same positive themes while adding fresh ideas. They continue to entertain and inspire new generations of fans. Many fans enjoy collecting Barbie dolls and merchandise related to the movies.</p>
+    </div>
+</div>
+</section>
 </html>
 <!----------MOVIES----------------------------->
