--- a/shows.html
+++ b/shows.html
@@ -102,13 +102,27 @@
     
 </div>
 </section>
-</body>
+
 <div class="paa">
     <p> 
         Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
         
         </p>
 </div>
+<section>
+
+<div class="section-container">
+    <div class="wide-text-container">
+        <p>The Barbie Series collection showcases a variety of animated shows and specials that highlight Barbie’s many adventures across the years. From Barbie Life in the Dreamhouse (2012) to Barbie a Touch of Magic (2023), each series brings fun, creativity, and friendship to life for audiences of all ages.
+        <br>
+        Many of the shows focus on themes of teamwork, imagination, and empowerment, whether Barbie is exploring magical worlds in Barbie Dreamtopia (2016) or teaming up with friends in It Takes Two (2022). These stories offer both long‑time fans and new viewers endless entertainment and inspiration.
+        <br>
+        Over time, Barbie content has expanded to include diverse formats like vlogging in Barbie Vlogger (2015) and musical adventures such as Barbie and the Rockers: Out of This World (1987). Together, these series celebrate fun, creativity, and positive messages that resonate with generations of viewers.</p>
+        </p>
+    </div>
+</div>
+</section>
+</body>
 </html>
 
 <!----------SHWOOSOSOSOSO----------------------------->
