--- a/characters.html
+++ b/characters.html
@@ -106,11 +106,12 @@
 
 <div class="section-container">
     <div class="wide-text-container">
-        <p>Barbie movies often focus on friendship, courage, and believing in yourself. Many stories take place in colorful worlds where Barbie goes on adventures and overcomes challenges. These films are made to be fun while sharing positive lessons.    </p>
-        <br> 
-        <p>Some Barbie movies are based on fairytales, while others are set in modern times. They show different characters working together and learning from their mistakes. Music and bright visuals make the stories more engaging for viewers. </p>
+        <p> Barbie and her friends are always ready for fun and adventure. Each character has a unique personality that makes the stories exciting. They show friendship, courage, and kindness in everything they do.        <br> 
         <br>
-        <p> Over the years, Barbie movies have become a big part of childhood for many people. New films keep the same positive themes while adding fresh ideas. They continue to entertain and inspire new generations of fans.</p>
+        The characters come from many different backgrounds and have different interests. Some love sports, others love music or magic. Together they work as a team and learn from each other.
+        <br>
+        Fans enjoy following the characters through all kinds of adventures. The characters make it easy for viewers to imagine their own stories. They continue to inspire creativity and positive lessons.
+        </p>
     </div>
 </div>
 </section>
