--- a/closet.html
+++ b/closet.html
@@ -106,7 +106,19 @@
     </div>
 </section>
 
+section>
 
+<div class="section-container">
+    <div class="wide-text-container">
+        <p>Barbie has a big closet full of clothes and accessories. Each outfit is colorful and stylish. Fans can mix and match pieces to create fun looks.
+        <br>
+        The closet includes everything from casual clothes to fancy dresses. Shoes, hats, and bags make the outfits even more special. It shows that fashion is a way to be creative.
+        <br>
+        Barbie’s closet inspires imagination for all kinds of stories. Viewers can plan adventures based on the outfits. It helps kids enjoy playing and creating new looks every day.
+        </p>
+    </div>
+</div>
+</section>
     <script src="./js/script.js"></script>
 </body>
 <div class="paa">
