--- a/characters.html
+++ b/characters.html
@@ -96,17 +96,18 @@
         </div>
     </div>
 </section>
+<section>
 <div class="paa">
     <p> 
         Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
         
         </p>
 </div>
+</section>
 <section>
-
 <div class="section-container">
     <div class="wide-text-container">
-        <p> Barbie and her friends are always ready for fun and adventure. Each character has a unique personality that makes the stories exciting. They show friendship, courage, and kindness in everything they do.        <br> 
+        <p> Barbie and her friends are always ready for fun and adventure. Each character has a unique personality that makes the stories exciting. They show friendship, courage, and kindness in everything they do.         
         <br>
         The characters come from many different backgrounds and have different interests. Some love sports, others love music or magic. Together they work as a team and learn from each other.
         <br>
