gusto ko po gumala

--- a/closet.html
+++ b/closet.html
@@ -108,8 +108,8 @@
 
 <section>
 
-<div class="section-container">
-    <div class="wide-text-container">
+<div class="section-containers">
+    <div class="wide-text-containers">
         <p>Barbie has a big closet full of clothes and accessories. Each outfit is colorful and stylish. Fans can mix and match pieces to create fun looks.
         <br>
         The closet includes everything from casual clothes to fancy dresses. Shoes, hats, and bags make the outfits even more special. It shows that fashion is a way to be creative.
