--- a/reference.html
+++ b/reference.html
@@ -99,7 +99,17 @@
           </footer>
     </div>
 </section>
-
+<div class="section-containers">
+    <div class="wide-text-containers">
+        <p>Working on this website taught us a lot about planning and organizing our ideas. We learned how important it is to structure code clearly so that everything works smoothly. Seeing our progress grow step by step was very rewarding but also remembering what we went through while coding makes our heads hurt...
+        <br>
+        We faced many challenges while coding, from formatting issues to making the site look good and also issues with how the formatting wasn't showing for different screens apart from where it was coded from. Sometimes the styles would not show correctly or functions would break unexpectedly. Each problem pushed us to research, experiment, and find solutions on our own.
+        <br>
+        But through these hardships, we gained patience and even more teamwork skills #WeTheBest. We realized that coding is not just about writing lines of code, but also about problem solving and creativity. These lessons will help us in future projects and make us better developers even if we do not wanna code anymore... ☻
+        </p>
+    </div>
+</div>
+</section>
 </body>
 
 <div class="paa">
