--- a/shows.html
+++ b/shows.html
@@ -96,7 +96,7 @@
 
     
     <div class="asset_cards">
-        <img src="./public/asset/show10.jpg" alt="">
+        <img src="./public/asset/atouch.webp" alt="">
         <p>Barbie a Touch of Magic (2023)</p>
     </div>
     
