--- a/closet.html
+++ b/closet.html
@@ -13,6 +13,7 @@
     </head>
 <body>
 
+
  <!-----------HEADER----------------------------->
 <header>
     <div class="container">
@@ -20,15 +21,14 @@
         <div class="logo">
             <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
-    <nav>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./movies.html">Movies</a></li>
-        <li><a href="./shows.html">Shows</a></li>
-        <li><a href="./characters.html">Characters</a></li>
-        <li><a href="./closet.html">Closet</a></li>
-        <li><a href="./reference.html">References</a></li>
-        
-    </nav>
+            <nav>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./shows.html">Shows</a></li>
+                <li><a href="./characters.html">Characters</a></li>
+                <li><a href="./closet.html">Closet</a></li>
+                <li><a href="./shop.html">Shop</a></li>
+            </nav>
     </div>
     </div>
 </header>
