--- a/movies.html
+++ b/movies.html
@@ -20,15 +20,14 @@
         <div class="logo">
             <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
-    <nav>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./movies.html">Movies</a></li>
-        <li><a href="./shows.html">Shows</a></li>
-        <li><a href="./characters.html">Characters</a></li>
-        <li><a href="./closet.html">Closet</a></li>
-        <li><a href="./reference.html">References</a></li>
-        
-    </nav>
+            <nav>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./shows.html">Shows</a></li>
+                <li><a href="./characters.html">Characters</a></li>
+                <li><a href="./closet.html">Closet</a></li>
+                <li><a href="./shop.html">Shop</a></li>
+            </nav>
     </div>
     </div>
 </header>
@@ -95,11 +94,11 @@
     </div>
 
     <div class="asset_cards">
-        <img src="./public/asset/movie10.png" alt="">
+        <img src="./public/asset/movie11.jpg" alt="">
         <p>Barbie Diaries (2006)</p>
     </div>
     <div class="asset_cards">
-        <img src="./public/asset/movie11.jpg" alt="">
+        <img src="./public/asset/movie10.png" alt="">
         <p>Barbie: A Fashion Fairytale (2010)</p>
     </div>
 
