--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
         <div class="logo">
             <a href="#"><img src="./public/asset/barbIE.png" alt=""></a>
         </div>
-    <nav>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./movies.html">Movies</a></li>
-        <li><a href="./shows.html">Shows</a></li>
-        <li><a href="./characters.html">Characters</a></li>
-        <li><a href="./closet.html">Closet</a></li>
-        <li><a href="./reference.html">References</a></li>
-        
-    </nav>
+            <nav>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="./shows.html">Shows</a></li>
+                <li><a href="./characters.html">Characters</a></li>
+                <li><a href="./closet.html">Closet</a></li>
+                <li><a href="./shop.html">Shop</a></li>
+            </nav>
     </div>
     </div>
 </header>
