--- a/login.html
+++ b/login.html
@@ -52,4 +52,10 @@
     <!-- Firebase & Particles -->
     <script type="module" src="./js/login.js"></script>
 </body>
+<div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>
 </html>
