--- a/shop.html
+++ b/shop.html
@@ -65,13 +65,15 @@
     <button class="close-cart">Close</button>
 </div>
 
-<!-- FOOTER -->
-<footer class="paa">
-    <p>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved</p>
-</footer>
 
 <!-- AYOS.JS -->
 <script type="module" src="./js/ayos.js"></script>
 
 </body>
+<div class="paa">
+    <p> 
+        Copyright <span>&copy; 2025 BarbieLaT (Barbie: Legacies and Tales). All Rights Reserved 
+        
+        </p>
+</div>
 </html>
