--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                 <div class="nav_overlay"><h2>Closet</h2></div>
             </a>
 
-            
+            <a href="./shop.html" class="nav_card">
+                <img src="./public/asset/shops.jpg"alt="Shoppee">
+                <div class="nav_overlay"><h2>Shop</h2></div>
+            </a>
+
             <a href="./reference.html" class="nav_card">
                 <img src="./public/asset/bubele bubele.jpg"alt="References">
                 <div class="nav_overlay"><h2>References</h2></div>
