--- a/reference.html
+++ b/reference.html
@@ -92,6 +92,17 @@
                 <li><a href="https://prismic.io/blog/css-hover-effects">MORE Hover Effects</a></li>
                 <li><a href="https://www.w3schools.com/CSSref/sel_hover.php">EVEN MORE Hover Effects</a></li>
             </ul>
+
+        <h3>✨ Stress links</h3>
+            <ul>
+                <li><a href="https://www.w3schools.com/howto/howto_css_login_form.asp">Log in tutorial</a></li>
+                <li><a href="https://www.geeksforgeeks.org/web-tech/building-an-e-commerce-website-code-sections-and-css-features/">How to code 505</a></li>
+                <li><a href="https://www.geeksforgeeks.org/javascript/how-to-save-data-in-session-and-local-storage/">Saving Data 101</a></li>
+                <li><a href="https://stackoverflow.com/questions/65516930/make-icon-clickable-in-html">Clickable Icon</a></li>
+                <li><a href="https://medium.com/@thakuradityasingh1512/connecting-firebase-to-your-html-page-guide-05c57eab5e31">Firebase to Storage</a></li>
+                <li><a href="https://www.geeksforgeeks.org/javascript/create-a-website-using-html-css-and-javascript-that-stores-data-in-firebase/">Storage</a></li>
+                <li><a href="https://firebase.google.com/docs/web/setup">Firebase</a></li>
+            </ul>
         </div>
         </section>
 <div class="section-containerZ">
