--- a/closet.html
+++ b/closet.html
@@ -28,6 +28,7 @@
                 <li><a href="./characters.html">Characters</a></li>
                 <li><a href="./closet.html">Closet</a></li>
                 <li><a href="./shop.html">Shop</a></li>
+                <li><a href="./reference.html">References</a></li>
             </nav>
     </div>
     </div>
