--- a/reference.html
+++ b/reference.html
@@ -27,6 +27,7 @@
                 <li><a href="./characters.html">Characters</a></li>
                 <li><a href="./closet.html">Closet</a></li>
                 <li><a href="./shop.html">Shop</a></li>
+                <li><a href="./reference.html">References</a></li>
             </nav>
     </div>
     </div>
@@ -102,11 +103,12 @@
                 <li><a href="https://medium.com/@thakuradityasingh1512/connecting-firebase-to-your-html-page-guide-05c57eab5e31">Firebase to Storage</a></li>
                 <li><a href="https://www.geeksforgeeks.org/javascript/create-a-website-using-html-css-and-javascript-that-stores-data-in-firebase/">Storage</a></li>
                 <li><a href="https://firebase.google.com/docs/web/setup">Firebase</a></li>
+                <li><a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp">Media Queries</a></li>
             </ul>
         </div>
         </section>
-<div class="section-containerZ">
-    <div class="wide-text-containerZ">
+<div class="section-container">
+    <div class="wide-text-containers">
         <p>Working on this website taught us a lot about planning and organizing our ideas. We learned how important it is to structure code clearly so that everything works smoothly. Seeing our progress grow step by step was very rewarding but also remembering what we went through while coding makes our heads hurt...
         <br>
         We faced many challenges while coding, from formatting issues to making the site look good and also issues with how the formatting wasn't showing for different screens apart from where it was coded from. Sometimes the styles would not show correctly or functions would break unexpectedly. Each problem pushed us to research, experiment, and find solutions on our own.
