--- a/movies.html
+++ b/movies.html
@@ -27,6 +27,7 @@
                 <li><a href="./characters.html">Characters</a></li>
                 <li><a href="./closet.html">Closet</a></li>
                 <li><a href="./shop.html">Shop</a></li>
+                <li><a href="./reference.html">References</a></li>
             </nav>
     </div>
     </div>
@@ -139,7 +140,7 @@
 <section>
 
 <div class="section-container">
-    <div class="wide-text-container">
+    <div class="wide-text-containers">
         <p>Barbie movies often focus on friendship, courage, and believing in yourself. Many stories take place in colorful worlds where Barbie goes on adventures and overcomes challenges. These films are made to be fun while sharing positive lessons. They encourage viewers to be kind and helpful to others. </p>
         <br> 
         <p>Some Barbie movies are based on fairytales, while others are set in modern times. They show different characters working together and learning from their mistakes. Music and bright visuals make the stories more engaging for viewers. The characters often face problems that teach important life lessons.</p>
