--- a/shows.html
+++ b/shows.html
@@ -27,6 +27,7 @@
                 <li><a href="./characters.html">Characters</a></li>
                 <li><a href="./closet.html">Closet</a></li>
                 <li><a href="./shop.html">Shop</a></li>
+                <li><a href="./reference.html">References</a></li>
             </nav>
     </div>
     </div>
@@ -111,7 +112,7 @@
 <section>
 
 <div class="section-container">
-    <div class="wide-text-container">
+    <div class="wide-text-containers">
         <p>The Barbie Series collection showcases a variety of animated shows and specials that highlight Barbie’s many adventures across the years. From Barbie Life in the Dreamhouse (2012) to Barbie a Touch of Magic (2023), each series brings fun, creativity, and friendship to life for audiences of all ages.
         <br>
         Many of the shows focus on themes of teamwork, imagination, and empowerment, whether Barbie is exploring magical worlds in Barbie Dreamtopia (2016) or teaming up with friends in It Takes Two (2022). These stories offer both long‑time fans and new viewers endless entertainment and inspiration.
