--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
 
 <!-- SHOP SECTION -->
 <section class="shop container">
-    <h3 class="normal_heading-1">Barbie's Boutique</h3>
+    <h3 class="main_heading">Barbie's Boutique</h3>
     <h2 class="main_heading">Shop the Magic Today!</h2>
 
     <div class="product-grid">
